tests/__snapshots__/api-toBeSymbol-stderr.snap.txt
Error: The source type is 'void'.

   7 |   expect(returnsSymbol()).type.toBeSymbol();
   8 | 
   9 |   expect(returnsVoid()).type.toBeSymbol();
     |                              ~~~~~~~~~~
  10 | });
  11 | 
  12 | test("is NOT symbol?", () => {

       at ./__typetests__/toBeSymbol.tst.ts:9:30 ❭ is symbol?

Error: The source type is 'symbol'.

  13 |   expect(returnsVoid()).type.not.toBeSymbol();
  14 | 
  15 |   expect(returnsSymbol()).type.not.toBeSymbol();
     |                                    ~~~~~~~~~~
  16 | });
  17 | 

       at ./__typetests__/toBeSymbol.tst.ts:15:36 ❭ is NOT symbol?

